--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </head>
 
   <body>
+    <script src="/buttons.js"></script>
     <script src="sketch.js"></script>
     <script src="js/ble.js" type="text/javascript"></script>
   </body>
