Update index.html to use rfduino

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <script src="/buttons.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketch_rfduino.js"></script>
     <script src="js/ble.js" type="text/javascript"></script>
   </body>
 </html>
